# agentic-metrics

./: .gitignore  README.md  main.py  pyproject.toml
dashboard/: README.md  main.py  pyproject.toml
dashboard/dashboard/: __init__.py  dashboard.py  db.py  traces.py
dashboard/dashboard/templates/: base.html
dashboard/dashboard/templates/dashboard/: index.html
dashboard/dashboard/templates/traces/: index.html
metric-dashboard/: .containerignore  Containerfile  README.md  pyproject.toml
metric-dashboard/dashboard/: __init__.py  db.py  events.py  home.py  spans.py  traces.py
metric-dashboard/dashboard/static/favicon/: site.webmanifest
metric-dashboard/dashboard/static/js/: tooltip.js
metric-dashboard/dashboard/static/styles/: style.css
metric-dashboard/dashboard/templates/: base.html
metric-dashboard/dashboard/templates/common/: _pagination.html
metric-dashboard/dashboard/templates/events/: index.html  show.html
metric-dashboard/dashboard/templates/home/: _card.html  index.html
metric-dashboard/dashboard/templates/spans/: index.html  metrics.html  show.html
metric-dashboard/dashboard/templates/traces/: index.html  show.html
metric-dashboard/dashboard/utils/: loader.py
metric-dashboard/openshift/: app-deployment.yaml  db-route.yaml
metric-dashboard/openshift/app/: app-cm.yaml  app-deployment.yaml  app-link.yaml  app-route.yaml  app-secret.yaml  app-service.yaml  kustomization.yaml
metric-generator/: README.md  pyproject.toml
metric-generator/openshift/: helm-repo.yaml  openlit-otel-route.yaml  openlit-route.yaml
(+1 files in other folders)
