[project]
name = "dashboard"
version = "0.1.0"
description = "Dashboard to see metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "flask>=3.1.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[tool.black]
target-version = ["py311"]
line-length = 88
