[project]
name = "dashboard"
version = "0.1.0"
description = "Dashboard to see metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chartkick>=1.1.0",
    "clickhouse-connect>=0.15.1",
    "flask>=3.1.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[tool.black]
target-version = ["py312"]
line-length = 88
