[project]
name = "metric-generator"
version = "0.1.0"
description = "Generate test metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.13.0",
    "openlit>=1.36.8",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[tool.black]
target-version = ["py311"]
line-length = 88
